# kcv-cpp

./: CHANGELOG.md  CMakeLists.txt  README.md
include/kcv/: kcv.hpp
test/: CMakeLists.txt  tests.cpp
test/read/: bool.cpp  bool.tpp  float.cpp  float.tpp  hex.cpp  hex.tpp  int.cpp  int.tpp  item.cpp  item.tpp  string.cpp  string.tpp  utf8.cpp  utf8.tpp
test/write/: bool.cpp  bool.tpp  float.cpp  float.tpp  hex.cpp  hex.tpp  int.cpp  int.tpp  item.cpp  item.tpp  string.cpp  string.tpp
